triangle using js and canvas

--- a/triangle.htm
+++ b/triangle.htm
@@ -5,7 +5,7 @@
             text-align: center;
         }
         #canvas {
-            background-color: #00ffe9;
+            /* background-color: #00ffe9; */
             position: relative;
             top: 25%;
         }
@@ -26,5 +26,6 @@
     ctx.lineTo(350, 50);
     ctx.lineTo(50, 350);
     ctx.stroke();
+    ctx.fill();
 </script>
 </body>
